deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &appname masa-base-webapp
  namespace: k3d-tst
  labels:
    app: *appname
    version: v1
  annotations: # 如果有 sidecar 引用會需要放在這
spec:
  # 部署更新策略，可以設定為
  # Recreate：先砍後建
  # RollingUpdate：再多個POD的狀況下，可進行滾動部署，終止一個POD，就建立一個對應的POD，建議使用預設的 RollingUpdate
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  replicas: 1
  selector:
    matchLabels:
      app: *appname
  template:
    metadata:
      labels:
        app: *appname
    spec:
      restartPolicy: Always
      containers:
        - name: *appname
          image: k3d-app-registry:30725/masa-base:v1
          imagePullPolicy: Always
          # 資源配置雖然可以設定基本要求(requests)以及最大上限(limits)，但就管理維運經驗，上線前建議設收斂為固定值，方便後續維運管理
          resources:
            requests:
              cpu: "1"
              # memory: 500Mi
              memory: 1Gi
            limits:
              cpu: "1"
              # memory: 500Mi
              memory: 1Gi
          # K8s Health Probe 設定，強烈建議要設定，但初期可邊做邊摸索該如何設定
          # 早期只有 Readiness 、Liveness 兩種 Probe，但近年 K8s 已開始主打 Startup Probe + Liveness Probe
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 7001
            # initialDelaySeconds: 180 # container 運行後 Probe 才開始運作。預設是 0 秒
            failureThreshold: 30 # Probe 偵測失敗的累計次數，超過此數值，即視為放棄服務重啟 container
            periodSeconds: 30 # Probe 的檢查間隔時間，預設是 10 秒
          # readinessProbe:
          #   httpGet:
          #     path: /
          #     port: 8080
          #     initialDelaySeconds: 60
          #     periodSeconds: 10
          # livenessProbe:
          #   httpGet:
          #     path: /actuator/health
          #     port: 7001
          #   initialDelaySeconds: 60
          #   periodSeconds: 10
          # 環境參數
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8787
              protocol: TCP
            - containerPort: 7001
              protocol: TCP
          volumeMounts:
            - name: k3d-tst-vlum # 指定使用 volumes 定義的 PVC
              # mountPath: /logs
              mountPath: /var/log/masa
      volumes:
        - name: k3d-tst-vlum
          persistentVolumeClaim:
            claimName: pvc-k3d-tst # 與 PVC 名稱對應(pvc-k3d-tst.yaml 中 metadata 的 name)
