ingress.yaml
# apiVersion: networking.k8s.io/v1beta1 # for k3s < v1.19
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &igs-appname igs-masa-base-webapp  # 此 ingress 名稱
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false" # 不會自動將 HTTP 請求重定向到 HTTPS
    # 如果有指定靜態IP就會寫在web-static-ip
    # kubernetes.io/ingress.global-static-ip-name: "web-static-ip"
spec:
  rules:
    - http:
        paths:
          # 包含所有來自根結點的呼叫
          - path: /
            pathType: Prefix
            backend: # 指向後段的哪個svc名稱
              service:
                name: svc-masa-base-webapp # 需與 service 名稱匹配
                # 後端指向 service 的 port 8093 
                port:
                  number: 8093
